@@ -3,7 +3,12 @@ SUBDIRS =
 include ../../build/rules.make
 
 LIBRARY = System.ServiceModel.Web.dll
-LIB_MCS_FLAGS = -d:NET_3_0 -r:System.dll -r:System.Xml.dll -r:System.Configuration.dll -r:System.Runtime.Serialization.dll -r:System.ServiceModel.dll
+LIB_MCS_FLAGS = -r:System.dll -r:System.Xml.dll -r:System.Runtime.Serialization.dll -r:System.ServiceModel.dll
+
+ifneq (2.1, $(FRAMEWORK_VERSION))
+LIB_MCS_FLAGS += /d:NET_3_0 	\
+			/r:System.Configuration.dll
+endif
 
 TEST_MCS_FLAGS = $(LIB_MCS_FLAGS)
 
