@@ -1,3 +1,10 @@
+2008-09-12  Jb Evain  <jbevain@novell.com>
+
+	* net_2_1_raw_System.ServiceModel.Web.dll.sources
+	* Makefile
+	* System.Runtime.Serialization.Json/JsonReader.cs:
+		support the SL2 profile compilation.
+
 2008-04-21  Igor Zelmanovich <igorz@mainsoft.com>
 
 	* System.ServiceModel.Web_test.dll.sources: add WebServiceHostTest.cs.
